# Data608-Project

./: .gitignore  Data608_Franco_n_Gautham_Project_Proposal.docx  Data608_Franco_n_Gautham_Project_Report.docx  LICENSE  Pitch.potx  Pitch.pptx  README.md  TEAM CONTRACT.docx  eda.ipynb  final report.pptx  proposal.pptx
game-api/: .dockerignore  .env  .env.example  .gitignore  ADMIN_API_DOCS.md  ADMIN_SETUP.md  ADMIN_USER_SUMMARY.md  Dockerfile  README.md  WEBSOCKET_IMPLEMENTATION.md  alembic.ini  configure-ec2-security.sh  create_admin.py  create_default_admin.py  deploy.sh  docker-compose.yaml  generate_hash.py  init_admin.py  pyproject.toml  pytest.ini  setup-ubuntu-vm.sh  setup_admin.bat  setup_database.py  test_sectors.py  verify_admin_setup.py
game-api/alembic/: env.py
game-api/alembic/versions/: 0001_initial_schema.py  0002_add_stock_prices_and_sectors_view.py  1339e4e8824c_rename_metadata_to_interaction_metadata.py  3aa44cd1c307_add_current_date_to_session_selections.py  505801369983_add_month_year_to_session_selections.py  (+5 more)
game-api/app/: crud.py  main.py  models.py  schemas.py
game-api/db/: create_admin.sql  init.sql
game-api/tests/: conftest.py  conftest_async.py  conftest_full.py  conftest_minimal.py  test_admin.py  test_async_basic.py  test_crud_async.py  test_crud_selections.py  test_docker_ready.py  test_main.py  test_players.py  test_sectors.py  test_selections.py  test_selections_with_month_year.py  test_sessions.py  test_stocks.py  test_summary.py  test_trades.py  test_unsold_shares.py  test_websocket.py  test_websocket_historical.py
(+62 files in other folders)
