[project]
name = "stock-roulette-api"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "websockets",
    "sqlalchemy",
    "alembic",
    "pydantic",
    "itsdangerous>=2.2.0",
    "passlib[bcrypt]>=1.7.4",
    "loguru>=0.7.3",
    "pydantic-settings>=2.10.1",
    "jinja2>=3.1.6",
    "psycopg[binary]>=3.2.9",
    "python-multipart>=0.0.6",
    "pytest>=7.4.0",
    "httpx>=0.24.0",
    "bcrypt>=4.0.0",
    "ollama>=0.1.0",
]
